--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,17 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://www.jitpack.io'
+        }
+        maven {
+            url 'https://dl.bintray.com/novoda-oss/snapshots/'
+        }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.31.2-alpha'
+        classpath "com.github.panpf.bintray-publish:bintray-publish:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +25,15 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://www.jitpack.io'
+        }
     }
+    /*//配置这个
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }*/
 }
 
 task clean(type: Delete) {
