--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 }
 /*apply from: 'and_res_guard.gradle'//压缩apk*/
 android {
+
+   /* //避免编译不能用于在编译类路径中发现的注解处理器，因为它们中的任何更改都需要运行注解处理任务
+    kapt.includeCompileClasspath = false*/
+
     signingConfigs {
         app {
             keyAlias sign.keyAlias
