--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ android {
         viewBinding true
     }
 
-    /*lintOptions {
+    lintOptions {
         disable 'InvalidPackage'
         disable "ResourceType"
         abortOnError false
@@ -86,7 +86,7 @@ android {
                 '--multi-dex',//多分包
                 '--set-max-idx-number=60000'//每个包内方法数上限
         ]
-    }*/
+    }
 
     // 渠道包定义，默认定义的名称就是渠道名称
    /* productFlavors {
