--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,10 @@ android {
         testInstrumentationRunner cfgs.testInstrumentationRunner  //用于启用JUnit测试
         resConfigs "zh-rCN", "zh-rHK", "zh-rMO", "zh-rTW" // 去除无用语言
         signingConfig signingConfigs.debug
-        /* ndk {
+         ndk {
            // 设置支持的SO库架构 一般只设置这个就阔以设配所有的设备了，还可以减少apk的大小
            abiFilters 'armeabi','armeabi-v7a'
-       }*/
+       }
     }
     buildFeatures {
         dataBinding = true
@@ -178,8 +178,11 @@ dependencies {
     implementation 'com.just.agentweb:filechooser:4.1.3'
     implementation 'com.download.library:Downloader:4.1.3'
     //Bugly
-    implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
-    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
+    /*implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'*/
+    //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
+    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     //屏幕适配
