--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,12 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-android-extensions'  //已经废弃被View Binding 取代
-    id 'kotlin-kapt'
+    id 'kotlin-kapt'  // 添加 kapt 插件支持
 }
-/*apply from: 'and_res_guard.gradle'//压缩apk*/
+static def releaseTime() {
+    return new Date().format("yyyyMMdd-HH")
+}
 android {
-
-   /* //避免编译不能用于在编译类路径中发现的注解处理器，因为它们中的任何更改都需要运行注解处理任务
-    kapt.includeCompileClasspath = false*/
-
     signingConfigs {
         app {
             keyAlias sign.keyAlias
@@ -21,9 +19,6 @@ android {
         }
     }
 
-    compileSdkVersion cfgs.compileSdkVersion
-    buildToolsVersion cfgs.buildToolsVersion
-
     defaultConfig {
         applicationId "com.xysss.androidnews"
         minSdkVersion cfgs.minSdkVersion
@@ -33,13 +28,10 @@ android {
         testInstrumentationRunner cfgs.testInstrumentationRunner  //用于启用JUnit测试
         resConfigs "zh-rCN", "zh-rHK", "zh-rMO", "zh-rTW" // 去除无用语言
         signingConfig signingConfigs.debug
-         ndk {
+        /* ndk {
            // 设置支持的SO库架构 一般只设置这个就阔以设配所有的设备了，还可以减少apk的大小
            abiFilters 'armeabi','armeabi-v7a'
-       }
-    }
-    buildFeatures {
-        dataBinding = true
+       }*/
     }
 
     buildTypes {
@@ -47,16 +39,25 @@ android {
             minifyEnabled true  //指定是否开启混淆
             zipAlignEnabled true  //Zipalign优化
             shrinkResources true  // 去除无用资源 与lint不同
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'  //混淆时使用的规则文件
             signingConfig signingConfigs.app
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'  //混淆时使用的规则文件
         }
         debug {
             minifyEnabled false
+            zipAlignEnabled true
             shrinkResources false
-            zipAlignEnabled false
+            signingConfig signingConfigs.app
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures {
+        dataBinding = true
+    }
+
+    compileSdkVersion cfgs.compileSdkVersion
+    buildToolsVersion cfgs.buildToolsVersion
+
     //使用Kotlin实验特性
     androidExtensions {
         experimental = true
@@ -89,17 +90,17 @@ android {
     }
 
     // 渠道包定义，默认定义的名称就是渠道名称
-   /* productFlavors {
-        // 0:dev, 1:qa, 2:线上
+    productFlavors {
+        // 0:dev 开发环境, 1:qa 测试环境, 2:线上
         dev {
-            manifestPlaceholders = [ENVIRONMENT: "0",  CHANNEL_ID: "dev",  APP_VERSION: rootProject.ext.android.versionCode]
+            manifestPlaceholders = [ENVIRONMENT: "0",  CHANNEL_ID: "dev",  APP_VERSION: cfgs.versionCode]
         }
         qa {
-            manifestPlaceholders = [ENVIRONMENT: "1",  CHANNEL_ID: "qa",  APP_VERSION: rootProject.ext.android.versionCode]
+            manifestPlaceholders = [ENVIRONMENT: "1",  CHANNEL_ID: "qa",  APP_VERSION: cfgs.versionCode]
             signingConfig signingConfigs.app
         }
         huawei {
-            manifestPlaceholders = [ENVIRONMENT: "2",  CHANNEL_ID: "biaozhun",  APP_VERSION: rootProject.ext.android.versionCode]
+            manifestPlaceholders = [ENVIRONMENT: "2",  CHANNEL_ID: "biaozhun",  APP_VERSION: cfgs.versionCode]
         }
         flavorDimensions "default"
     }
@@ -108,7 +109,7 @@ android {
     applicationVariants.all { variant ->
         variant.outputs.all {
             if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                def fileName = outputFileName.replace("app", "MVVMSmart-kotlin")
+                def fileName = outputFileName.replace("app", "AndroidNews-kotlin")
                 // 中段(保持不变)
                 // 尾端
                 if (fileName.contains("-dev"))
@@ -119,10 +120,7 @@ android {
                 outputFileName = fileName
             }
         }
-    }*/
-
-
-
+    }
 }
 
 dependencies {
