--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,7 +125,6 @@ android {
 
 dependencies {
     implementation project(path: ':JetpackMvvm')  //项目核心框架
-
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -192,4 +191,9 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation 'com.louiscad.splitties:splitties-collections:2.1.1'
+    //Room数据库
+    implementation 'androidx.room:room-runtime:2.2.5'
+    kapt 'androidx.room:room-compiler:2.2.5'
+    //6.0以上权限请求管理
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 }
