--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,21 @@ android {
             }
         }
     }
+
+    //groovy
+    configurations.all {
+        resolutionStrategy.force "org.antlr:antlr4-runtime:4.5.3"
+        resolutionStrategy.force "org.antlr:antlr4-tool:4.5.3"
+    }
+
+//kotlin DSL
+    configurations.all {
+        resolutionStrategy {
+            force("org.antlr:antlr4-runtime:4.5.3")
+            force("org.antlr:antlr4-tool:4.5.3")
+        }
+    }
+
 }
 
 dependencies {
@@ -192,8 +207,9 @@ dependencies {
     }
     implementation 'com.louiscad.splitties:splitties-collections:2.1.1'
     //Room数据库
-    implementation 'androidx.room:room-runtime:2.2.5'
-    kapt 'androidx.room:room-compiler:2.2.5'
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    implementation "androidx.room:room-ktx:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     //6.0以上权限请求管理
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 }
