--- a/JetpackMvvm/build.gradle
+++ b/JetpackMvvm/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'com.github.dcendents.android-maven'
-    //id 'com.github.panpf.bintray-publish'
 }
 
 android {
@@ -44,13 +43,14 @@ dependencies {
     api 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
     api 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     // viewModel
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    api "androidx.fragment:fragment-ktx:1.2.5"
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+    api "androidx.fragment:fragment-ktx:1.3.1"
     // liveData
     api "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
     api 'com.kunminx.archi:unpeek-livedata:4.4.1-beta1'
     //navigation
-    api 'androidx.navigation:navigation-runtime-ktx:2.3.2'
+    api 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    api 'androidx.navigation:navigation-ui-ktx:2.3.5'
     //retrofit
     api "com.squareup.retrofit2:retrofit:2.9.0"
     api "com.squareup.retrofit2:converter-gson:2.9.0"
