--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'  //已经废弃被View Binding 取代
-    id 'kotlin-kapt'  // 添加 kapt 插件支持
-}
-static def releaseTime() {
-    return new Date().format("yyyyMMdd-HH")
-}
+apply plugin: 'com.android.application'
+
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'  //已经废弃被View Binding 取代
+
+apply plugin: 'kotlin-kapt'  // 添加 kapt 插件支持
+
 android {
     signingConfigs {
         app {
@@ -18,20 +17,30 @@ android {
             v2SigningEnabled true
         }
     }
-
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.xysss.androidnews"
-        minSdkVersion cfgs.minSdkVersion
-        targetSdkVersion cfgs.targetSdkVersion //开启目标版本以下的功能特性
+        minSdkVersion 21
+        targetSdkVersion 30//开启目标版本以下的功能特性
         versionCode cfgs.versionCode
         versionName cfgs.versionName
         testInstrumentationRunner cfgs.testInstrumentationRunner  //用于启用JUnit测试
         resConfigs "zh-rCN", "zh-rHK", "zh-rMO", "zh-rTW" // 去除无用语言
         signingConfig signingConfigs.debug
+        multiDexEnabled true
         /* ndk {
            // 设置支持的SO库架构 一般只设置这个就阔以设配所有的设备了，还可以减少apk的大小
            abiFilters 'armeabi','armeabi-v7a'
        }*/
+    }
+
+    buildFeatures {
+        dataBinding = true
+    }
+    //使用Kotlin实验特性
+    androidExtensions {
+        experimental = true
     }
 
     buildTypes {
@@ -51,27 +60,12 @@ android {
         }
     }
 
-    buildFeatures {
-        dataBinding = true
-    }
-
-    compileSdkVersion cfgs.compileSdkVersion
-    buildToolsVersion cfgs.buildToolsVersion
-
-    //使用Kotlin实验特性
-    androidExtensions {
-        experimental = true
-    }
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
     }
     kotlinOptions {
         jvmTarget = '1.8'
-    }
-    buildFeatures {
-        viewBinding true
     }
 
     lintOptions {
@@ -88,58 +82,9 @@ android {
                 '--set-max-idx-number=60000'//每个包内方法数上限
         ]
     }
-
-    // 渠道包定义，默认定义的名称就是渠道名称
-    productFlavors {
-        // 0:dev 开发环境, 1:qa 测试环境, 2:线上
-        dev {
-            manifestPlaceholders = [ENVIRONMENT: "0",  CHANNEL_ID: "dev",  APP_VERSION: cfgs.versionCode]
-        }
-        qa {
-            manifestPlaceholders = [ENVIRONMENT: "1",  CHANNEL_ID: "qa",  APP_VERSION: cfgs.versionCode]
-            signingConfig signingConfigs.app
-        }
-        huawei {
-            manifestPlaceholders = [ENVIRONMENT: "2",  CHANNEL_ID: "biaozhun",  APP_VERSION: cfgs.versionCode]
-        }
-        flavorDimensions "default"
-    }
-    buildToolsVersion = android.buildToolsVersion
-    //参考：https://blog.csdn.net/lablenet/article/details/78391457
-    applicationVariants.all { variant ->
-        variant.outputs.all {
-            if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                def fileName = outputFileName.replace("app", "AndroidNews-kotlin")
-                // 中段(保持不变)
-                // 尾端
-                if (fileName.contains("-dev"))
-                    fileName = fileName.replace(".apk", "_v${defaultConfig.versionName}_t${releaseTime()}.apk")
-                else
-                    fileName = fileName.replace(".apk", "_v${defaultConfig.versionName}.apk")
-                //output.outputFile = new File(outputFile.parent, fileName)
-                outputFileName = fileName
-            }
-        }
-    }
-
-    //groovy
-    configurations.all {
-        resolutionStrategy.force "org.antlr:antlr4-runtime:4.5.3"
-        resolutionStrategy.force "org.antlr:antlr4-tool:4.5.3"
-    }
-
-//kotlin DSL
-    configurations.all {
-        resolutionStrategy {
-            force("org.antlr:antlr4-runtime:4.5.3")
-            force("org.antlr:antlr4-tool:4.5.3")
-        }
-    }
-
 }
 
 dependencies {
-    implementation project(path: ':JetpackMvvm')  //项目核心框架
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -190,13 +135,10 @@ dependencies {
     implementation 'com.just.agentweb:filechooser:4.1.3'
     implementation 'com.download.library:Downloader:4.1.3'
     //Bugly
-    /*implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
-    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'*/
-    //compile 'com.tencent.bugly:crashreport:latest.release'//其中latest.release指代最新版本号，也可以指定明确的版本号，例如2.3.2
-    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
-    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
+    implementation 'com.tencent.bugly:crashreport_upgrade:1.4.5'
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     //屏幕适配
     implementation 'me.jessyan:autosize:1.2.1'
     //防崩溃
