--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 11 18:06:54 CST 2021
-sdk.dir=C\:\\Users\\bysd-2\\AppData\\Local\\Android\\Sdk
+#Sun Jun 27 21:23:57 CST 2021
+sdk.dir=G\:\\android sdk
