--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,10 +26,10 @@ android {
         resConfigs "zh-rCN", "zh-rHK", "zh-rMO", "zh-rTW" // 去除无用语言
         signingConfig signingConfigs.debug
         multiDexEnabled true
-        /* ndk {
+         ndk {
            // 设置支持的SO库架构 一般只设置这个就阔以设配所有的设备了，还可以减少apk的大小
            abiFilters 'armeabi','armeabi-v7a'
-       }*/
+       }
     }
 
     buildFeatures {
