--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.android.support:multidex:1.0.3'
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
     //androidx UI
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -136,7 +135,7 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:3.7.1'
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    //屏幕适配
+    //今日头条屏幕适配方案优化
     implementation 'me.jessyan:autosize:1.2.1'
     //防崩溃
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
@@ -151,5 +150,9 @@ dependencies {
     kapt "androidx.room:room-compiler:$rootProject.roomVersion"
     //6.0以上权限请求管理
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    //内存泄漏检测工具
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.4'
+    //调试数据库
+    //debugImplementation 'com.guolindev.glance:glance:1.1.0'
 
 }
